fixing horizontal scroll issue

--- a/css/responsive-pullout-menu.less
+++ b/css/responsive-pullout-menu.less
@@ -67,8 +67,6 @@ nav#left ul li:hover {
 #wrapper {
 	width: 100%;
 	height: 100%;
-	position: absolute;
-	left: 0;
 }
 
 .section {
@@ -83,7 +81,7 @@ nav#left ul li:hover {
 nav#top {
 	width: 100%;
 	height: 58px;
-	position: fixed;
+	position: relative;
 	top: 0;
 	background-color: @navbg;
 	color: @font-color;
